--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -7,7 +7,7 @@
 -->
 <html class="home blog no-js" lang="en-US">
 <head>
-    <title>Itsy | A cutesy little template by FreeHTML5.co</title>
+    <title>PostSingle</title>
 
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
